# workshop_web_scraping

./: .env-examples  README.md  anotacoes.txt  pyproject.toml
src/: start.py  visualize_data.py
src/browser/crawler/: ml_browser.py
src/browser/crawlers/: amazon_crawler.py  comentarios_eshoje_completo.csv  consulta_comentarios_eshoje.py  default_crawler.py
src/browser/providers/: browser_provider.py
src/crawler/: ml_browser.py  ml_browser_31102025.py  ml_request.py
src/request/: generic_crawler.py
src/request/crawlers/: default_crawler.py
src/tools/: __init__.py  populate_redis.py  redis_client.py
